feat(users): add users api
